version/0.15/_sources/api/solver/_autosummary/settings/gravity.rst.txt
:orphan:

.. _gravity:

gravity
=======

.. autoclass:: ansys.fluent.core.solver.settings_231.gravity.gravity
    :show-inheritance:

.. rubric:: Attributes

==============================   ===================================

Attribute                                                    Summary

==============================   ===================================
:ref:`enable <enable_2>`             Set gravitational acceleration.

:ref:`components <components>`                   'components' child.

==============================   ===================================

.. rubric:: Included in:

========================   ====================

Parent                                  Summary

========================   ====================
:ref:`general <general>`       'general' child.

========================   ====================

