version/0.17/_sources/api/solver/_autosummary/settings/gravity.rst.txt
:orphan:

.. _gravity:

gravity
=======

.. autoclass:: ansys.fluent.core.solver.settings_232.gravity.gravity
    :show-inheritance:

.. rubric:: Attributes

==================================================   =============================================================================

Attribute                                                                                                                  Summary

==================================================   =============================================================================
:ref:`enable <enable_2>`                                                                           Set gravitational acceleration.

:ref:`components <components>`                                                                                 'components' child.

:ref:`gravity_mrf_behavior <gravity_mrf_behavior>`       Enable/disable the fix of gravity vector in a stationary reference frame.

==================================================   =============================================================================

.. rubric:: Included in:

==================================================   =================================

Parent                                                                         Summary

==================================================   =================================
:ref:`operating_conditions <operating_conditions>`       'operating_conditions' child.

==================================================   =================================

